feat: Add event handler

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,11 @@
 body {
   background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 }
+.user__booking, .user__bookings-header {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+};
